--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="index.css">
   <title>National Park Finder</title>
 </head>
 <body>
@@ -11,12 +12,18 @@
     <h1>National Park Finder</h1>
     <form id="js-form">
         <label for="search-term">Search term</label>
-        <input type="text" name="search-term" id="js-search-term" required>
+        <input type="text" name="search-term" id="js-search-term">
 
         <label for="max-results">Maximum results to return</label>
         <input type="number" name="max-results" id="js-max-results" value="10">
-
-        <input type="submit" value="Search">
+        
+        <span class="dropdown">
+          <input type="button" name="dropbtn" class="dropbtn" value="in state(s)">
+          <ul class="dropdown-content hidden"></ul>
+        </span>
+        
+        <div class="addedStates"></div>
+        <input class="searchbtn" type="submit" value="Search">
     </form>
     <p id="js-error-message" class="error-message"></p>
     <section id="results" class="hidden">
